# KCast

./: .gitignore  .gitlab-ci.yml  .packit.yaml  CHANGELOG.md  CMakeLists.txt  EZMonitor-0.2-Release.spec  Messages.sh  README.md  _service  cast.py  kcast-0.2.0-1.x86_64.rpm  kcast-v0.1.0.plasmoid  kcast-v0.2.0.plasmoid  kcast.spec
.githooks/: pre-commit
.github/workflows/: catt-refresh.yml  deb.yml  obs-submit.yml
bugfix_#11/: kcast-dbgsym_0.2.1-#11_amd64.deb  kcast_0.2.1-#11_amd64.deb
debian/: changelog  control  rules
package/: CMakeLists.txt  metadata.json
package/contents/code/: kcastd.py  show_ip.py
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  configNetwork.qml  main.qml
package/plugin/: CMakeLists.txt  backendlauncher.cpp  backendlauncher.h  kcastinterface.cpp  kcastinterface.h  kcastplugin.qmltypes  qmldir
package/po/: CMakeLists.txt
package/po/de/: kcast.po
packaging/: kcast.spec
plugin/: CMakeLists.txt  main.cpp
po/: nl.po
servicemenus/: kcast_stream.desktop
translate/: kcast.pot
translate/ca/: plasma_applet_ca.agundur.kcast.po
translate/de/: plasma_applet_de.agundur.kcast.po
translate/es/: plasma_applet_de.agundur.kcast.po
translate/fr/: plasma_applet_de.agundur.kcast.po
translate/nl/: plasma_applet_de.agundur.kcast.po
translate/ru/: plasma_applet_de.agundur.kcast.po
